--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 *.userosscache
 *.sln.docstates
 
+# Composer ignore :
+composer.phar
+/vendor/
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
