--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,16 @@
 {
+    "repositories": [{
+        "type": "package",
+        "package": {
+            "name": "nmrugg/stockfish.js",
+            "version": "10.0",
+            "source": {
+                "url": "https://github.com/nmrugg/stockfish.js.git",
+                "type": "git",
+                "reference": "master"
+            }
+        }
+    }],
     "require": {
         "components/jquery": "^3.5",
         "mervick/material-design-icons": "^2.2",
@@ -6,6 +18,7 @@
         "components/normalize.css": "^3.0",
         "components/font-awesome": "^5.15",
         "components/masonry": "^4.2",
-        "desandro/imagesloaded": "^4.1"
+        "desandro/imagesloaded": "^4.1",
+        "nmrugg/stockfish.js": "*"
     }
 }
